<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_Name"
        android:inputType="number"
        android:textColor="#888888"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editText1"
        android:hint="@string/pwd_name_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="7"
        android:maxLength="5"
        android:inputType="number"

        />




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pwd_name"
        android:textColor="#888888"
        android:textSize="25sp"
        />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="7"
        android:hint="@string/pwd_name_info"
        android:inputType="textPassword" />






    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:onClick="resert"
            android:layout_marginLeft="30dp"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:onClick="ok"
            android:layout_marginLeft="60dp"
            />

    </LinearLayout>

</LinearLayout>
